tests/sksl/errors/ArrayIndexOutOfRange.dsl.glsl
### Compilation failed:

error: interface blocks are not yet supported
error: no type named 'Block'
2 errors
